@@ -1,3 +1,9 @@
+2017-04-11  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/80212
+	* ipa-cp.c (determine_versionability): Handle calls_comdat_local
+	flags.
+
 2017-04-11  Martin Sebor  <msebor@redhat.com>
 
 	PR middle-end/80364
